Added a  simply layout for the home page of the applicaton.
this layout contained examples of the jobs title, company, location, &
a description with a button that will connect the page to the job desc.
page.

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,11 @@
+:root{
+  --bcca-brown: #3b1b0c;
+  --bcca-blue: #83cff2;
+}
+
 .bg-bcca-color {
 
-    background-color: #3b1b0c
+    background-color: var(--bcca-brown);
 }
 
 .text-bcca {
@@ -107,3 +112,8 @@
       margin-top: 0;
     }
   }
+
+  .job-card{
+    border-color: var(--bcca-brown)
+  }
+  
