--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark  bg-bcca-color">
-        <span class="text-white">Base Camp Coding Academy</span>
+        <a class="nav-link text-bcca" href="{% url 'home' %}"><span class="text-white">Base Camp Coding Academy</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
