--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,28 @@
 {% extends 'base.html' %} {% block body %}
-<div class="home-container">
-    <div class="card-body">
-        
-    </div>
+<div class="home-container pt-3 ml-3 mr-3 d-flex justify-content-center">
+    <div class="row">
+        <div class="col-sm-6">
+          <div class="card job-card">
+            <div class="card-body">
+              <h5 class="card-title">Job Title</h5>
+              <p>company</p>
+              <p>location</p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ut alias quo soluta quos veniam obcaecati at quod, natus accusamus consequuntur enim ipsam eligendi minus illo odit laboriosam tempore doloribus.</p>
+              <a href="#" class="btn btn-primary">view job</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card job-card">
+            <div class="card-body">
+              <h5 class="card-title">Job Title</h5>
+              <p>company</p>
+              <p>location</p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, mollitia optio. Quidem tempora optio suscipit eos reiciendis incidunt delectus exercitationem, rem adipisci accusantium! Veritatis aliquid temporibus, nulla possimus voluptate nihil.</p>
+              <a href="#" class="btn btn-primary">view job</a>
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
 {% endblock body %}
