--- a/app/templates/post-job.html
+++ b/app/templates/post-job.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="row"></div>
-                    <input type="submit" value="Submit"></div>
+                    <input type="submit" value="Post Job"></div>
                 </div>
             </form>
         </div>
