--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,12 +10,13 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous" />
+        <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark  bg-bcca-color">
-        <a class="nav-link text-bcca" href="{% url 'home' %}"><span class="text-white">Base Camp Coding Academy</span></a>
+        <a class="nav-link text-bcca" href="{% url 'home' %}"><span class="text-white">Base Camp Coding Academy Job Board</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,13 +29,13 @@
                         <a class="nav-link text-bcca" href="{% url 'post-job' %}"><span class="text-bcca">Post</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-bcca" href=""><span class="text-bcca">...</span></a>
+                        <a class="nav-link text-bcca" href=""><span class="text-bcca">Admin</span></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div id="headerBkgImg" class="fill">
+    <div id="headerBkgImg" class="fill mb-3">
         <span class="center-spacer"></span>
         <img id="headerImg" src="/static/imgs/header-logo.png">
     </div>
@@ -47,5 +48,8 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+        <script src="{% static 'jquery-3.3.1.slim.min.js' %}"></script>
+        <script src="{% static 'popper.min.js' %}"></script>
+        <script src="{% static 'bootstrap.min.js' %}"></script>
 </body>
 </html>
