--- a/app/templates/apply.html
+++ b/app/templates/apply.html
@@ -2,11 +2,10 @@
 
 <div class="mt-3 container card">
         <div class="card-body">
-            <h1>Apply to This Jab</h1>
+            <h1>Apply to This Job</h1>
             <div class="container">
                 <form action="" method="POST">
                     {% csrf_token %}
-                    <!-- {{form}} -->
                     <div class="row">
                         <div class="col-25">
                             <label class="post-label" for="name">Name:</label>
