--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,34 +1,28 @@
-:root{
-  --bcca-brown: #3b1b0c;
-  --bcca-blue: #83cff2;
+:root {
+    --bcca-brown: #3b1b0c;
+    --bcca-blue: #83cff2;
 }
 
 .bg-bcca-color {
-
     background-color: var(--bcca-brown);
 }
 
 .text-bcca {
-
-    color: #999d98
+    color: #999d98;
 }
 
 .link-notLIne {
-
-    text-decoration: none
+    text-decoration: none;
 }
 
 .text-bcca:hover {
-
     color: white;
-
 }
 
 .bccaClassImg {
     max-width: 100%;
 
     height: auto;
-
 }
 
 #headerBkgImg {
@@ -40,13 +34,12 @@
 
 #headerImg {
     vertical-align: middle;
-
 }
 
 .center-spacer {
     display: inline-block;
     height: 100%;
-    vertical-align: middle
+    vertical-align: middle;
 }
 
 .fill {
@@ -55,66 +48,92 @@
 
 * {
     box-sizing: border-box;
-  }
-  
-  input[type=text], select, textarea {
+}
+
+input[type="text"],
+select,
+textarea {
     width: 100%;
     padding: 12px;
-    border: 1px solid #ccc;
+    border: 1px solid #999d98;
     border-radius: 4px;
     resize: vertical;
-  }
-  
-  .post-label {
+}
+
+.post-label {
     padding: 12px 12px 12px 0;
     display: inline-block;
-  }
-  
-  input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
+}
+
+input[type="submit"] {
+    background-color: #007bff;
+    color: #999d98;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     float: right;
-  }
+}
 
-  .container {
+.container {
     border-radius: 5px;
-    background-color: #f2f2f2;
     padding: 20px;
-  }
-  
-  .col-25 {
+}
+
+.col-25 {
     float: left;
     width: 25%;
     margin-top: 6px;
-  }
-  
-  .col-75 {
+}
+
+.col-75 {
     float: left;
     width: 75%;
     margin-top: 6px;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
+}
+
+/* Clear floats after the columns */
+.row:after {
     content: "";
     display: table;
     clear: both;
-  }
-  
-  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .col-25, .col-75, input[type=submit] {
-      width: 100%;
-      margin-top: 0;
-    }
-  }
+}
 
-  .job-card{
-    border-color: var(--bcca-brown)
-  }
-  
-  
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .col-25,
+    .col-75,
+    input[type="submit"] {
+        width: 100%;
+        margin-top: 0;
+    }
+}
+
+.job-card {
+    /* border-color: var(--bcca-brown) */
+}
+
+.job-card-body {
+    width: 619.667px;
+    height: 272px;
+}
+
+.card {
+    padding: 5px;
+    border-style: dashed;
+    border-left-color: #3b1b0c;
+    border-top-color: #3b1b0c;
+    border-bottom: none;
+    border-right: none;
+    border-radius: 0%;
+}
+
+.center-content {
+    padding-left: 50rem;
+}
+
+.comment-card{
+    border: 1px;
+    border-bottom-color: #3b1b0c;
+    border-bottom-style: dashed;
+}
