--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %} {% block body %}
+<h1 class="text-center">Admin Home Page</h1>
 <div class="home-container d-flex m-8">
-    <h1>Admin Home Page</h1>
     <div class="row justify-content-center">
         {% for post in post_job %}
         <div class="col-sm-5 m-3">
             <div class="card job-card">
                 <div class="card-body">
-                    <h5 class="card-title">{{ post.jobTitle }}</h5>
+                    <p class="card-title" style="font-size:1.25rem"><b>{{ post.jobTitle }}</b></p>
                     <p>{{ post.companyName }}</p>
                     <p>{{ post.jobLocation }}</p>
                     <p class="card-text">
-                        {{ post.jobDescription | truncatechars: 200 }}
+                        {{ post.jobDescription | truncatechars:200 }}
                     </p>
                     <a
                         href="{% url 'details' post.id %}"
