--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
                         <a class="nav-link text-bcca" href="{% url 'post-job' %}"><span class="text-bcca">Post</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-bcca" href=""><span class="text-bcca">Admin</span></a>
+                        <a class="nav-link text-bcca" href="{% url 'admin' %}"><span class="text-bcca">Admin</span></a>
                     </li>
                 </ul>
             </div>
