--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="row"></div>
-                <button class="btn btn-success my-3" type="submit">
+                <button class="btn btn-primary my-3" type="submit">
                     Post Comment
                 </button>
             </form>
