--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %} {% block body %}
+
 <div class="home-container d-flex m-8">
     <div class="row justify-content-center">
         {% for post in post_job %}
         <div class="col-sm-5 m-3">
             <div class="card job-card">
                 <div class="card-body">
-                    <h5 class="card-title">{{ post.jobTitle }}</h5>
+                        <p class="card-title" style="font-size:1.25rem"><b>{{ post.jobTitle }}</b></p>
                     <p>{{ post.companyName }}</p>
                     <p>{{ post.jobLocation }}</p>
                     <p class="card-text">
                         {{ post.jobDescription | truncatechars:200 }}
                     </p>
-                    <a href="{% url 'details' post.id %}" class="btn btn-primary">
+                    <a
+                        href="{% url 'details' post.id %}"
+                        class="btn btn-primary"
+                    >
                         view job
                     </a>
                 </div>
