--- a/app/templates/post-job.html
+++ b/app/templates/post-job.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="row"></div>
-                    <button class="btn btn-success my-3" type="submit">Post Job</button>
+                    <button class="btn btn-primary my-3" type="submit">Post Job</button>
                 </div>
             </form>
         </div>
