--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,9 @@
         <div class="col-sm-5 m-3">
             <div class="card job-card">
                 <div class="card-body">
-                        <p class="card-title" style="font-size:1.25rem"><b>{{ post.jobTitle }}</b></p>
+                    <p class="card-title" style="font-size:1.25rem">
+                        <b>{{ post.jobTitle }}</b>
+                    </p>
                     <p>{{ post.companyName }}</p>
                     <p>{{ post.jobLocation }}</p>
                     <p class="card-text">
