--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,27 +1,58 @@
 {% extends 'base.html' %} {% block body %}
 <h1 class="text-center">Admin Home Page</h1>
+<form class="container" action="" method="GET">
+    <div class="d-flex">
+        <input
+            type="text"
+            name="q"
+            class="form-control col-sm-3 col-md-6 col-lg-7"
+            placeholder="Ex: Ridgeland"
+            value="{{ request.GET.q }}"
+        />
+        <input type="submit" value="Search" class="ml-3 mb-4 btn btn-primary" />
+    </div>
+</form>
 <div class="home-container d-flex m-8">
-    <div class="row justify-content-center">
-        {% for post in post_job %}
-        <div class="col-sm-5 m-3">
-            <div class="card job-card">
-                <div class="card-body">
-                    <p class="card-title" style="font-size:1.25rem"><b>{{ post.jobTitle }}</b></p>
-                    <p>{{ post.companyName }}</p>
-                    <p>{{ post.jobLocation }}</p>
-                    <p class="card-text">
-                        {{ post.jobDescription | truncatechars:200 }}
-                    </p>
-                    <a
-                        href="{% url 'details' post.id %}"
-                        class="btn btn-primary"
-                    >
-                        view job
-                    </a>
+    <div class="card-body">
+        <div class="row justify-content-center">
+            {% for post in post_job %}
+            <div class="col-sm-5 m-3">
+                <div class="card job-card">
+                    <div class="card-body">
+                        <p class="card-title" style="font-size:1.25rem">
+                            <b>{{ post.jobTitle }}</b>
+                        </p>
+                        <p>{{ post.companyName }}</p>
+                        <p>{{ post.jobLocation }}</p>
+                        <p class="card-text">
+                            {{ post.jobDescription | truncatechars:200 }}
+                        </p>
+                        <div class="d-flex">
+                            <a
+                                href="{% url 'details' post.id %}"
+                                class="btn btn-primary m-1"
+                            >
+                                view job
+                            </a>
+                            <br />
+                            <form
+                                action="{% url 'delete-job' post.id %}"
+                                method="POST"
+                            >
+                                {% csrf_token %}
+                                <button
+                                    type="submit"
+                                    class="btn btn-danger m-1"
+                                >
+                                    Delete
+                                </button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
+        {% endblock body %}
     </div>
-    {% endblock body %}
 </div>
