--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,55 +1,92 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BCCA Job Board</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous" />
-        <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}"/>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>BCCA Job Board</title>
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+            integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+        <link rel="stylesheet" href="{% static 'style.css' %}" />
+    </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg sticky-top navbar-dark  bg-bcca-color">
-        <a class="nav-link text-bcca" href="{% url 'home' %}"><span class="text-white">Base Camp Coding Academy Job Board</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <body>
+        <nav
+            class="navbar navbar-expand-lg sticky-top navbar-dark  bg-bcca-color"
+        >
+            <a class="nav-link text-bcca" href="{% url 'home' %}"
+                ><span class="text-white"
+                    >Base Camp Coding Academy Job Board</span
+                ></a
+            >
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="nav-container">
-                <ul class="nav navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-bcca" href="{% url 'post-job' %}"><span class="text-bcca">Post</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-bcca" href="{% url 'admin' %}"><span class="text-bcca">Admin</span></a>
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="nav-container">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item">
+                            <a
+                                class="nav-link text-bcca"
+                                href="{% url 'post-job' %}"
+                                ><span class="text-bcca">Post</span></a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link text-bcca"
+                                href="{% url 'admin' %}"
+                                ><span class="text-bcca">Admin</span></a
+                            >
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+        <div id="headerBkgImg" class="fill mb-3">
+            <span class="center-spacer"></span>
+            <img id="headerImg" src="{% static 'imgs/header-logo.png' %}" />
         </div>
-    </nav>
-    <div id="headerBkgImg" class="fill mb-3">
-        <span class="center-spacer"></span>
-        <img id="headerImg" src="/static/imgs/header-logo.png">
-    </div>
-    {% block body %} {% endblock body %}
+        {% block body %} {% endblock body %}
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"
+        ></script>
         <script src="{% static 'jquery-3.3.1.slim.min.js' %}"></script>
         <script src="{% static 'popper.min.js' %}"></script>
         <script src="{% static 'bootstrap.min.js' %}"></script>
-</body>
+    </body>
 </html>
