--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,12 @@
         />
         <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
         <link rel="stylesheet" href="{% static 'style.css' %}" />
+
+        <style>
+            :root {
+                --header-background: url({% static "imgs/BaseCamp_HeaderFeature_1.jpg" %});
+            }
+        </style>
     </head>
 
     <body>
