--- a/app/templates/post-job.html
+++ b/app/templates/post-job.html
@@ -1,10 +1,24 @@
 {% extends 'base.html' %} {% block body %}
+{{ form.errors }}
 <div class="mt-3 container card">
     <div class="card-body">
         <h1>Post Your Job</h1>
         <div class="container">
             <form action="{% url 'post-job' %}" method="POST">
                 {% csrf_token %}
+                <div class="row">
+                    <div class="form-group col-25">
+                        <label for="logo">Logo:</label>
+                    </div>
+                    <div class="col-75">
+                        <input
+                            name="logo"
+                            type="url"
+                            class="form-control"
+                            placeholder="URL for your logo..."
+                        />
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-25">
                         <label class="post-label" for="companyName">Company Name:</label>
