--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,6 +74,11 @@
             <span class="center-spacer"></span>
             <img id="headerImg" src="{% static 'imgs/header-logo.png' %}" />
         </div>
+        <div class="d-flex">
+                <a class="btn btn-primary ml-5" type="button" href="{% url 'az' %}">A - Z</a>
+                <a class="btn btn-primary ml-2" type="button" href="{% url 'newold' %}">Newest - Oldest</a>
+                <a class="btn btn-primary ml-2" type="button" href="{% url 'oldnew' %}">Oldest - Newest</a>
+            </div>
         {% block body %} {% endblock body %}
 
         <script
